--- a/index.html
+++ b/index.html
@@ -3,69 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impulsa Tu Futuro</title>
+    <title>IMPULSA TU FUTURO</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://moria.aurens.com/organizations/8ba3334d-84e3-491c-a560-16c94f1d1460/logos/qgg3v3-cropped-logounp.jpg" type="image/png">
 </head>
 <body>
-    <!-- Fondo con dos imágenes -->
-    <div class="background-container">
-        <div class="bg1"></div>
-        <div class="bg2"></div>
-    </div>
-
-    <!-- Header / descripción -->
+    <!-- Barra de navegación -->
     <header>
-        <h1>IMPULSA TU FUTURO</h1>
-        <p>Impulsa tu Futuro es un proyecto educativo promovido por 
-            la corporación FerryCorp y desarrollado por estudiantes 
-            de la Universidad Nacional de Piura de diversas escuelas 
-            profesionales, como Ingeniería Electrónica y Telecomunicaciones, 
-            Industrial, Química, Mecatrónica, Administración, Economía,
-            Educación, entre otras, nuestro objetivo es brindar a los estudiantes 
-            de 5º de secundaria acceso a información actualizada, 
-            recursos prácticos y ejemplos de proyectos que los inspiren 
-            a tomar decisiones informadas sobre su futuro académico y profesional, 
-            con una plataforma interactiva y fácil de usar, buscamos motivar a los 
-            jóvenes a explorar sus intereses, conocer diferentes áreas del conocimiento 
-            y prepararse mejor para la educación superior, este proyecto combina innovación,
-            colaboración interdisciplinaria y tecnología para generar un impacto 
-            real en la comunidad estudiantil.
-        </p>
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="recursos.html">Recursos</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- Sección de enlaces / tarjetas -->
-    <section class="links-section">
-        <h2>Recursos del Proyecto</h2>
-        <div class="cards-container">
-            <div class="card">
-                <h3>Guía de Estudio</h3>
-                <p>Documentos para preparar tu proyecto.</p>
-                <a href="https://drive.google.com/yourlink1" target="_blank">Abrir enlace</a>
-            </div>
-            <div class="card">
-                <h3>Ejemplos de Proyectos</h3>
-                <p>Inspírate con proyectos anteriores.</p>
-                <a href="https://drive.google.com/yourlink2" target="_blank">Abrir enlace</a>
-            </div>
-            <div class="card">
-                <h3>Material de Apoyo</h3>
-                <p>Videos y documentos de referencia.</p>
-                <a href="https://drive.google.com/yourlink3" target="_blank">Abrir enlace</a>
-            </div>
-            <div class="card">
-                <h3>Formulario de Consulta</h3>
-                <p>Resuelve tus dudas y preguntas.</p>
-                <a href="https://drive.google.com/yourlink4" target="_blank">Abrir enlace</a>
-            </div>
+    <!-- Contenedor de fondos -->
+    <div class="background-container">
+        <div class="bg bg1"></div>
+        <div class="bg bg2"></div>
+    </div>
+
+    <!-- Hero / Sección principal -->
+    <section class="hero">
+        <div class="text-container">
+            <h1>IMPULSA TU FUTURO</h1>
+            <p>Impulsa Tu Futuro es un proyecto educativo promovido por 
+                la corporación FerryCorp y desarrollado por estudiantes 
+                de la Universidad Nacional de Piura de diversas escuelas 
+                profesionales, como Ingeniería Electrónica y Telecomunicaciones, 
+                Industrial, Química, Mecatrónica, Administración, Economía,
+                Educación, entre otras, nuestro objetivo es brindar a los estudiantes 
+                de 5º de secundaria acceso a información actualizada, 
+                recursos prácticos y ejemplos de proyectos que los inspiren 
+                a tomar decisiones informadas sobre su futuro académico y profesional. 
+                Con una plataforma interactiva y fácil de usar, buscamos motivar a los 
+                jóvenes a explorar sus intereses, conocer diferentes áreas del conocimiento 
+                y prepararse mejor para la educación superior, este proyecto combina innovación,
+                colaboración interdisciplinaria y tecnología para generar un impacto 
+                real en la comunidad estudiantil.
+            </p>
         </div>
     </section>
 
-    <footer>
+    <footer id="contacto">
         <p>&copy; 2025 Impulsa Tu Futuro</p>
+        <p>Contacto: correo@universidad.edu.pe</p>
     </footer>
 
-    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
