--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
 
     <footer id="contacto">
         <p>&copy; 2025 Impulsa Tu Futuro</p>
-        <p>Contacto: correo@universidad.edu.pe</p>
+        <!--<p>Contacto: correo@universidad.edu.pe</p> -->
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-
