--- a/recursos.html
+++ b/recursos.html
@@ -21,41 +21,37 @@
     <section class="resources">
         <h1>Recursos del Proyecto</h1>
         <div class="cards-container">
+            
+            <!-- Noticias -->
             <div class="card">
-                <img src="images/image3.jpg" alt="Guía de Estudio">
+                <img src="images/image3.jpg" alt="Noticias">
                 <div class="card-content">
-                    <h3>Guía de Estudio</h3>
-                    <p>Documentos para preparar tu proyecto.</p>
-                    <a href="images/image3.jpg" target="_blank">Abrir enlace</a>
+                    <h3>Noticias</h3>
+                    <p>Últimas noticias para impulsar tu futuro.</p>
+                    <a href="noticias.html">Abrir</a>
                 </div>
             </div>
 
-            <div class="card">
-                <img src="images/image4.jpg" alt="Ejemplos de Proyectos">
-                <div class="card-content">
-                    <h3>Ejemplos de Proyectos</h3>
-                    <p>Inspírate con proyectos anteriores.</p>
-                    <a href="https://drive.google.com/yourlink2" target="_blank">Abrir enlace</a>
-                </div>
-            </div>
-
+            <!-- Material de Apoyo -->
             <div class="card">
                 <img src="images/images5.jpeg" alt="Material de Apoyo">
                 <div class="card-content">
                     <h3>Material de Apoyo</h3>
                     <p>Videos y documentos de referencia.</p>
-                    <a href="https://drive.google.com/yourlink3" target="_blank">Abrir enlace</a>
+                    <a href="materiales.html">Abrir</a>
                 </div>
             </div>
 
+            <!-- Formulario de Consulta -->
             <div class="card">
                 <img src="images/images6.jpg" alt="Formulario de Consulta">
                 <div class="card-content">
                     <h3>Formulario de Consulta</h3>
                     <p>Resuelve tus dudas y preguntas.</p>
-                    <a href="https://drive.google.com/yourlink4" target="_blank">Abrir enlace</a>
+                    <a href="https://drive.google.com/yourlink4" target="_blank">Abrir</a>
                 </div>
             </div>
+
         </div>
     </section>
 
