--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
+                <!-- Quitamos Inicio -->
                 <li><a href="recursos.html">Recursos</a></li>
             </ul>
         </nav>
@@ -33,24 +33,19 @@
                 de la Universidad Nacional de Piura de diversas escuelas 
                 profesionales, como Ingeniería Electrónica y Telecomunicaciones, 
                 Industrial, Química, Mecatrónica, Administración, Economía,
-                Educación, entre otras, nuestro objetivo es brindar a los estudiantes 
+                Educación, entre otras. Nuestro objetivo es brindar a los estudiantes 
                 de 5º de secundaria acceso a información actualizada, 
                 recursos prácticos y ejemplos de proyectos que los inspiren 
                 a tomar decisiones informadas sobre su futuro académico y profesional. 
                 Con una plataforma interactiva y fácil de usar, buscamos motivar a los 
                 jóvenes a explorar sus intereses, conocer diferentes áreas del conocimiento 
-                y prepararse mejor para la educación superior, este proyecto combina innovación,
-                colaboración interdisciplinaria y tecnología para generar un impacto 
-                real en la comunidad estudiantil.
+                y prepararse mejor para la educación superior.
             </p>
         </div>
     </section>
 
     <footer id="contacto">
         <p>&copy; 2025 Impulsa Tu Futuro</p>
-        <!--<p>Contacto: correo@universidad.edu.pe</p> -->
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
