--- a/recursos.html
+++ b/recursos.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="recursos.css">
 </head>
 <body>
-    <!-- Barra de navegación -->
+    <!-- Botón de regreso -->
     <header>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="recursos.html">Recursos</a></li>
-            </ul>
-        </nav>
+        <div class="back-button">
+            <a href="index.html">⬅ Regresar</a>
+        </div>
     </header>
 
     <!-- Sección de recursos -->
