--- a/noticias.html
+++ b/noticias.html
@@ -10,7 +10,7 @@
 
     <!-- Botón de regresar -->
     <a href="recursos.html" class="back-button">
-        <span>←</span> Regresar
+        <span>⬅</span> Regresar
     </a>
 
     <!-- Contenido de la página -->
@@ -21,19 +21,10 @@
                 <img src="images/sinersa.jpg" alt="Noticia 1">
                 <div class="card-content">
                     <h3>BECAS SINERSA</h3>
-                    <p>Aqui podras encontrar Becas en colaboración con UDEP</p>
+                    <p>Aquí podrás encontrar becas en colaboración con UDEP.</p>
                     <a href="https://sinersaperu.com/publicaciones/noticias/" target="_blank">Abrir enlace</a>
                 </div>
             </div>
-
-         <!--  <div class="card">
-                <img src="images/image4.jpg" alt="Noticia 2">
-                <div class="card-content">
-                    <h3>Noticia 2</h3>
-                    <p>Detalles de la noticia 2...</p>
-                    <a href="https://tuperiodico.com/noticia2" target="_blank">Abrir enlace</a>
-                </div>
-            </div>--> 
         </div>
     </section>
 
