--- a/materiales.html
+++ b/materiales.html
@@ -5,27 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Material de Apoyo - Impulsa Tu Futuro</title>
   <link rel="stylesheet" href="recursos.css">
-  <style>
-    .back-button {
-      display: inline-flex;
-      align-items: center;
-      margin: 15px;
-      font-size: 18px;
-      text-decoration: none;
-      color: #333;
-    }
-    .back-button:hover {
-      color: #007BFF;
-    }
-    .back-button span {
-      font-size: 24px;
-      margin-right: 5px;
-    }
-  </style>
 </head>
 <body>
   <!-- Botón de regresar -->
-  <a href="recursos.html" class="back-button"><span>←</span> Regresar</a>
+  <a href="recursos.html" class="back-button">
+      <span>⬅</span> Regresar
+  </a>
 
   <section class="resources">
     <h1>Material de Apoyo</h1>
