--- a/recursos.html
+++ b/recursos.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="recursos.css">
 </head>
 <body>
-    <!-- Botón de regreso -->
-    <header>
-        <div class="back-button">
-            <a href="index.html">⬅ Regresar</a>
-        </div>
-    </header>
+    <!-- Botón de regresar -->
+    <a href="index.html" class="back-button">
+        <span>⬅</span> Regresar
+    </a>
 
     <!-- Sección de recursos -->
     <section class="resources">
