--- a/noticias.html
+++ b/noticias.html
@@ -21,7 +21,8 @@
                 <img src="images/sinersa.jpg" alt="Noticia 1">
                 <div class="card-content">
                     <h3>BECAS SINERSA</h3>
-                    <p>Aquí podrás encontrar becas en colaboración con UDEP.</p>
+                    <p>Enlace a la información de becas, 
+                       publicada en el sitio oficial de SINERSA.</p>
                     <a href="https://sinersaperu.com/publicaciones/noticias/" target="_blank">Abrir enlace</a>
                 </div>
             </div>
@@ -30,6 +31,8 @@
 
     <footer>
         <p>&copy; 2025 Impulsa Tu Futuro</p>
+        <small>Las noticias enlazadas pertenecen a sus respectivos autores o sitios oficiales. 
+        Este sitio únicamente redirige a fuentes externas con fines informativos.</small>
     </footer>
 </body>
 </html>
